# rust-genealogy

./: .gitignore  .recs.config  Cargo.toml  README.md  progess.md
content/: LICENSE
content/articles/: 2014-06-27-foobar.md  2014-09-14-libfx-0-1-1-released.md  2014-09-17-codefx-up-and-running.md  2014-09-22-decorator-pattern-saved-my-day.md  2014-09-25-workflows-refactoring.md  2014-09-30-decorator-pattern-java-8.md  2014-10-04-architecture-lost-years.md  2014-10-07-intention-revealing-code-java-8-optional.md  2014-10-18-design-optional.md  2014-10-22-why-isnt-optional-serializable.md  2014-10-26-concepts-serialization.md  2014-10-29-serialization-proxy-pattern.md  2014-11-02-serialize-optional.md  2014-11-09-lambdas-java-peek-hood.md  2014-11-13-javafx-sources-in-eclipse.md  2014-11-23-libfx-0-2-0-released.md  2014-11-28-use-listenerhandles.md  2014-12-03-multiple-return-statements.md  2014-12-08-instances-non-capturing-lambdas.md  2014-12-31-goodbye-2014.md  2015-01-01-hello-2015.md  2015-01-07-new-javadoc-tags.md  2015-01-15-everything-about-default-methods.md  2015-01-26-android-emulator-haxm-thinkpad-t440p.md  2015-02-15-value-based-classes.md  2015-02-26-interface-evolution-with-default-methods-methods.md  2015-03-09-test-collection-implementations-with-guava.md  2015-03-16-roll-your-own-pirate-elvis-operator.md  2015-03-26-agile-architecture.md  2015-04-10-interface-evolution-with-default-methods-interfaces.md  2015-04-17-getting-rid-of-anonymous-classes.md  2015-04-27-how-java-9-and-project-jigsaw-may-break-your-code.md  2015-05-02-libfx-0-2-1-released.md  2015-05-06-crafted-design.md  2015-05-11-first-release-of-jdeps-maven-plugin.md  2015-05-18-javafx-project-jigsaw-jep-253.md  2015-05-26-transforming-collections.md  2015-05-28-libfx-0-3-0-released.md  2015-06-18-motivation-goals-project-jigsaw.md  2015-06-30-features-project-jigsaw-java-9.md  (+101 more)
content/talks/: best-practices.md  comment-your-code.md  expert-java-8.md  java-9-migration.md  java-after-n.md  java-module-system.md  java-next.md  java-var.md  java-x.md  junit-5.md  junit-pioneer.md
content/videos/: 2016-12-06-interview-devoxx-be-2016.md  2017-03-29-nighthacking-javaland-2017.md  2017-09-20-impressions-javazone-2017.md  2017-09-21-welcome-java-9.md  2017-11-16-var-java-10.md  2018-09-20-effective-java-00-kickoff.md  2018-09-24-effective-java-01-static-factory-methods.md  2021-01-26-jdk-news-1.md  (+15 more)
genealogists/: Cargo.toml
genealogists/src/: lib.rs  meta_inf_services.rs  module_info.rs  repo.rs  silly.rs  tags.rs  type.rs
genealogists/src/repo/: repo_genealogist.rs  repo_genealogist_service.rs
genealogists/src/silly/: silly_genealogist.rs  silly_genealogist_service.rs
genealogists/src/tags/: tag_genealogist.rs  tag_genealogist_service.rs
genealogists/src/type/: type_genealogist.rs  type_genealogist_service.rs
genealogy/: Cargo.toml
genealogy-java-apis/: Cargo.toml
genealogy-java-apis/src/: atomic_reference.rs  collection.rs  collector.rs  comparator.rs  completable_future.rs  exception.rs  files.rs  function.rs  indexing.rs  iterator.rs  lib.rs  list.rs  map.rs  null.rs  optional.rs  path.rs  process_handle.rs  runtime.rs  service_loader.rs  set.rs  static.rs  stream.rs  string.rs  system.rs  test.rs  time.rs  uri.rs
genealogy-java-apis/src/function/: bi_function.rs  bi_predicate.rs  supplier.rs
genealogy-macros/: Cargo.toml
genealogy-main/: Cargo.toml
genealogy-main/src/: json.rs  main.rs
genealogy/src/: config.rs  genealogist.rs  genealogy.rs  helpers.rs  java_replicas.rs  lib.rs  main.rs  post.rs  process_details.rs  recommendation.rs  test_helpers.rs  text_parser_tests.rs  utils.rs
genealogy/src/genealogist/: genealogist.rs  genealogist_service.rs  relation_type.rs  typed_relation.rs
genealogy/src/genealogy/: relation.rs  relation_test_helper.rs  score.rs  weight.rs  weights.rs
genealogy/src/helpers/: classes.rs  collection.rs  collector.rs  completable_future.rs  exception.rs  extensions.rs  files.rs  indexing.rs  integer.rs  iterator.rs  list.rs  map.rs  mean.rs  objects.rs  option_extensions.rs  optional.rs  path.rs  service_loader.rs  set.rs  static.rs  stream.rs  string.rs  string_extensions.rs  system.rs  test.rs  time.rs  uri.rs
genealogy/src/helpers/iterator/: equal.rs  split_pair.rs
genealogy/src/java_replicas/: exception.rs
genealogy/src/post/: article.rs  content.rs  description.rs  factories.rs  repository.rs  slug.rs  tag.rs  talk.rs  title.rs  video.rs  video_slug.rs
genealogy/src/post/factories/: article_factory.rs  post_factory.rs  raw_front_matter.rs  raw_post.rs  talk_factory.rs  video_factory.rs
genealogy/src/recommendation/: recommender.rs
src/: article.rs  exception.rs  genealogist.rs  main.rs  text_parser_tests.rs  try_iterator.rs  utils.rs
(+35 files in other folders)
