[package]
name = "rust-geneaology"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
lazy_static = "1.4"
chrono = "0.4"
hamcrest2 = "0.3.0"
