[package]
name = "genealogists"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genealogy = {path = "../genealogy"}
genealogy-java-apis = {path = "../genealogy-java-apis"}
