[package]
name = "genealogy-java-apis"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", default_features = false, features = ["clock"]}
debug_stub_derive = "0.3"
dirs = "4"
futures-lite = "1"
lazy_static = "1"
literally = "0.1.3"
pin-project = "1"
regex = {version = "1", default_features = false, features = ["std"]}
rustc_version_runtime = "0.2.0"
semver = "0.9" # Required because it is used by "rustc_version_runtime"
url = "2"
