[package]
name = "genealogy-main"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genealogists = {path = "../genealogists"}
genealogy = {path = "../genealogy"}
