[package]
name = "genealogy"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", default_features = false, features = ["clock"]}
debug_stub_derive = "0.3"
dirs = "4"
futures-lite = "1"
lazy_static = "1"
parking_lot = "0.11"
pin-project = "1"
regex = {version = "1", default_features = false, features = ["std"]}
resiter = "0.4"
url = "2"

[dev-dependencies]
literally = "0.1.3"
