[package]
name = "genealogy"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genealogy-java-apis = {path = "../genealogy-java-apis"}
debug_stub_derive = "0.3"
